Initial pairing is now working
Still have an issue, where we are not able to store the url right

--- a/SensorsUnleasedGui/suGui/widgets.qrc
+++ b/SensorsUnleasedGui/suGui/widgets.qrc
@@ -8,5 +8,6 @@
         <file>Overlaybox.qml</file>
         <file>CoapSetupContent.qml</file>
         <file>SettingSlider.qml</file>
+        <file>SUPutValue.qml</file>
     </qresource>
 </RCC>
