Gui has been reworked
New screens has been introduced, making it possible to traverse each
node, and interact with each sensor in a more streamlined way.

--- a/SensorsUnleasedGui/suGui/pages.qrc
+++ b/SensorsUnleasedGui/suGui/pages.qrc
@@ -3,5 +3,6 @@
         <file>main.qml</file>
         <file>FrontPage.qml</file>
         <file>TestPage.qml</file>
+        <file>NodesPage.qml</file>
     </qresource>
 </RCC>
