--- a/SensorsUnleasedGui/suGui/sensorwidgets.qrc
+++ b/SensorsUnleasedGui/suGui/sensorwidgets.qrc
@@ -3,5 +3,10 @@
         <file>Sensor.qml</file>
         <file>SensorInformation.qml</file>
         <file>SensorConfig.qml</file>
+        <file>PowerRelay.qml</file>
+        <file>PulseCounter.qml</file>
+        <file>SensorPairing.qml</file>
+        <file>SensorList.qml</file>
+        <file>LedIndicator.qml</file>
     </qresource>
 </RCC>
