Change of pair/bind typology
To make better use of CoAP, it has been decided to always pair an
actuator with a sensor - not the other way around.

--- a/SensorsUnleasedGui/suGui/pages.qrc
+++ b/SensorsUnleasedGui/suGui/pages.qrc
@@ -1,8 +1,9 @@
 <RCC>
     <qresource prefix="/">
         <file>main.qml</file>
-        <file>FrontPage.qml</file>
-        <file>TestPage.qml</file>
         <file>NodesPage.qml</file>
+        <file>SensorInformation.qml</file>
+        <file>NewNodeScreen.qml</file>
+        <file>NodeInformation.qml</file>
     </qresource>
 </RCC>
