--- a/SensorsUnleasedGui/suGui/pages.qrc
+++ b/SensorsUnleasedGui/suGui/pages.qrc
@@ -6,5 +6,6 @@
         <file>NewNodeScreen.qml</file>
         <file>NodeInformation.qml</file>
         <file>NodeConfig.qml</file>
+        <file>NodeList.qml</file>
     </qresource>
 </RCC>
